// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aliased field on query 1`] = `
Object {
  "links": Object {},
  "records": Object {
    "Query": Object {
      "__typename": "Query",
      "int": 42,
    },
  },
}
`;

exports[`aliased field on query 2`] = `
Set {
  "Query.int",
}
`;

exports[`embedded object on entity 1`] = `
Object {
  "links": Object {
    "Item:1.author": "Item:1.author",
    "Query.item": "Item:1",
  },
  "records": Object {
    "Item:1": Object {
      "__typename": "Item",
      "author": undefined,
      "id": 1,
    },
    "Item:1.author": Object {
      "__typename": "Author",
      "name": "Stanley",
    },
    "Query": Object {
      "__typename": "Query",
      "item": undefined,
    },
  },
}
`;

exports[`embedded object on entity 2`] = `
Set {
  "Query.item",
  "Item:1",
  "Item:1.author",
}
`;

exports[`embedded object on entity 3`] = `
Object {
  "links": Object {
    "Item:1.author": "Author:1",
    "Query.item": "Item:1",
  },
  "records": Object {
    "Author:1": Object {
      "__typename": "Author",
      "id": 1,
      "name": "Stanley",
    },
    "Item:1": Object {
      "__typename": "Item",
      "author": undefined,
      "id": 1,
    },
    "Query": Object {
      "__typename": "Query",
      "item": undefined,
    },
  },
}
`;

exports[`embedded object on entity 4`] = `
Set {
  "Query.item",
  "Item:1",
  "Author:1",
}
`;

exports[`entity list on query 1`] = `
Object {
  "links": Object {
    "Query.items": Array [
      "Item:1",
      "Item:2",
    ],
  },
  "records": Object {
    "Item:1": Object {
      "__typename": "Item",
      "id": 1,
    },
    "Item:2": Object {
      "__typename": "Item",
      "id": 2,
    },
    "Query": Object {
      "__typename": "Query",
      "items": undefined,
    },
  },
}
`;

exports[`entity list on query 2`] = `
Set {
  "Query.items",
  "Item:1",
  "Item:2",
}
`;

exports[`entity list on query and inline fragment 1`] = `
Object {
  "links": Object {
    "Query.items": Array [
      "Item:1",
      null,
    ],
  },
  "records": Object {
    "Item:1": Object {
      "__typename": "Item",
      "id": 1,
      "test": true,
    },
    "Query": Object {
      "__typename": "Query",
      "items": undefined,
    },
  },
}
`;

exports[`entity list on query and inline fragment 2`] = `
Set {
  "Query.items",
  "Item:1",
}
`;

exports[`entity list on query and spread fragment 1`] = `
Object {
  "links": Object {
    "Query.items": Array [
      "Item:1",
      null,
    ],
  },
  "records": Object {
    "Item:1": Object {
      "__typename": "Item",
      "id": 1,
      "test": true,
    },
    "Query": Object {
      "__typename": "Query",
      "items": undefined,
    },
  },
}
`;

exports[`entity list on query and spread fragment 2`] = `
Set {
  "Query.items",
  "Item:1",
}
`;

exports[`entity on aliased field on query 1`] = `
Object {
  "links": Object {
    "Query.item": "Item:1",
  },
  "records": Object {
    "Item:1": Object {
      "__typename": "Item",
      "id": "1",
      "name": "Test",
    },
    "Query": Object {
      "__typename": "Query",
      "item": undefined,
    },
  },
}
`;

exports[`entity on aliased field on query 2`] = `
Set {
  "Query.item",
  "Item:1",
}
`;

exports[`entity on query 1`] = `
Object {
  "links": Object {
    "Query.item": "Item:1",
  },
  "records": Object {
    "Item:1": Object {
      "__typename": "Item",
      "id": "1",
      "name": "Test",
    },
    "Query": Object {
      "__typename": "Query",
      "item": undefined,
    },
  },
}
`;

exports[`entity on query 2`] = `
Set {
  "Query.item",
  "Item:1",
}
`;

exports[`entity with Int-like ID on query 1`] = `
Object {
  "links": Object {
    "Query.item": "Item:1",
  },
  "records": Object {
    "Item:1": Object {
      "__typename": "Item",
      "id": 1,
      "name": "Test",
    },
    "Query": Object {
      "__typename": "Query",
      "item": undefined,
    },
  },
}
`;

exports[`entity with Int-like ID on query 2`] = `
Set {
  "Query.item",
  "Item:1",
}
`;

exports[`entity with arguments on query 1`] = `
Object {
  "links": Object {
    "Query.item({\\"test\\":true})": "Item:1",
  },
  "records": Object {
    "Item:1": Object {
      "__typename": "Item",
      "id": "1",
      "name": "Test",
    },
    "Query": Object {
      "__typename": "Query",
      "item({\\"test\\":true})": undefined,
    },
  },
}
`;

exports[`entity with arguments on query 2`] = `
Set {
  "Query.item({\\"test\\":true})",
  "Item:1",
}
`;

exports[`int field with arguments on query 1`] = `
Object {
  "links": Object {},
  "records": Object {
    "Query": Object {
      "__typename": "Query",
      "int({\\"test\\":true})": 42,
    },
  },
}
`;

exports[`int field with arguments on query 2`] = `
Set {
  "Query.int({\\"test\\":true})",
}
`;

exports[`int on query 1`] = `
Object {
  "links": Object {},
  "records": Object {
    "Query": Object {
      "__typename": "Query",
      "int": 42,
    },
  },
}
`;

exports[`int on query 2`] = `
Set {
  "Query.int",
}
`;

exports[`invalid entity on query 1`] = `
Object {
  "links": Object {},
  "records": Object {
    "Query": Object {
      "__typename": "Query",
      "item": Object {
        "__typename": null,
        "id": "123",
        "name": "Test",
      },
    },
  },
}
`;

exports[`invalid entity on query 2`] = `
Set {
  "Query.item",
}
`;

exports[`json on query 1`] = `
Object {
  "links": Object {},
  "records": Object {
    "Query": Object {
      "__typename": "Query",
      "json": Object {
        "__typename": "Misleading",
        "test": true,
      },
    },
  },
}
`;

exports[`json on query 2`] = `
Set {
  "Query.json",
}
`;

exports[`nested entity list on query 1`] = `
Object {
  "links": Object {
    "Query.items": Array [
      "Item:1",
      Array [
        "Item:2",
        null,
      ],
      null,
    ],
  },
  "records": Object {
    "Item:1": Object {
      "__typename": "Item",
      "id": 1,
    },
    "Item:2": Object {
      "__typename": "Item",
      "id": 2,
    },
    "Query": Object {
      "__typename": "Query",
      "items": undefined,
    },
  },
}
`;

exports[`nested entity list on query 2`] = `
Set {
  "Query.items",
  "Item:1",
  "Item:2",
}
`;

exports[`non-IDable entity on query 1`] = `
Object {
  "links": Object {
    "Query.item": "Query.item",
  },
  "records": Object {
    "Query": Object {
      "__typename": "Query",
      "item": undefined,
    },
    "Query.item": Object {
      "__typename": "Item",
      "name": "Test",
    },
  },
}
`;

exports[`non-IDable entity on query 2`] = `
Set {
  "Query.item",
}
`;

exports[`non-keyable entity on query 1`] = `
Object {
  "links": Object {
    "Query.item": "Query.item",
  },
  "records": Object {
    "Query": Object {
      "__typename": "Query",
      "item": undefined,
    },
    "Query.item": Object {
      "__typename": "Item",
      "name": "Test",
    },
  },
}
`;

exports[`non-keyable entity on query 2`] = `
Set {
  "Query.item",
}
`;

exports[`nullable field on query 1`] = `
Object {
  "links": Object {},
  "records": Object {
    "Query": Object {
      "__typename": "Query",
      "missing": null,
    },
  },
}
`;

exports[`nullable field on query 2`] = `
Set {
  "Query.missing",
}
`;
